# cursed-soc

./: .gitattributes  README.md
gateware/: pyproject.toml  top.py
gateware/board/: ebaz4205.py
gateware/cursed_soc/: VexRiscvAxi3.v  __init__.py  axi_to_wishbone.py  cpu.py  ps7.py  zynq_ifaces.py
linux/loader/: Cargo.toml  rust-toolchain.toml
linux/loader/.cargo/: config.toml
linux/loader/src/: main.rs
linux/loader/src/hal/: alloc.rs  cpu.rs  dma_buf.rs  mod.rs
rv/: shell.nix
rv/hello_world/: Cargo.toml  Makefile
rv/hello_world/.cargo/: config.toml
rv/hello_world/src/: lib.rs
